--- a/PressStart_DBMS.csproj
+++ b/PressStart_DBMS.csproj
@@ -10,4 +10,8 @@
     <Folder Include="SQL Scripts\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
 </Project>
