--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="zoeLaptopConnection" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename="C:\Users\zoeol\Documents\School\Databases 3\Final Project\PressStart_DBMS\db.mdf";Integrated Security=True</Value>
     </Setting>
+    <Setting Name="LoganConnString" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename="C:\Users\logan\OneDrive\Desktop\DBAS\FINAL\Final studio\db.mdf";Integrated Security=True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
